# ai-ml-practice

./: pyproject.toml  requirements.txt
src/ai_ml_practice/: main.ipynb
