[project]
name = "ai-ml-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Aymane Cheikh",email = "aymanecheikh2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "fastparquet (>=2025.12.0,<2026.0.0)",
    "pandas (>=2.2.0)",
    "pyarrow (==20.0.0)"
]

[tool.poetry]
packages = [{include = "ai_ml_practice", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
